public/css/feeds.css
.no-feeds {
  text-align: center;
  margin: 2em auto 0;
}

.feeds {
  list-style-type: none;
  margin: 0;
  padding: 1em 1em 0;
  position: relative;
}

.feeds.empty {
  display: none;
}

.feeds li {
  width: 10em;
  margin: 1em;
  display: inline-block;
  vertical-align: top;
}

.feeds .feed {
  display: block;
  color: #fff;
}

.feeds .feed .img-container {
  line-height: 10em;
  text-align: center;
  width: 10em;
  height: 10em;
}

.feeds .feed .img-container .icon {
  display: inline-block;
  max-height: 100%;
  max-width: 100%;
  vertical-align: middle;
}

.feeds .feed span {
  display: block;
  text-align: center;
}

.feeds .feed .unreads {
  padding: 0;
}

.feeds .feed .unreads:before {
  content: 'Unreads: ';
}

.feeds .feed .name {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  background: transparent;
}

.feeds .remove {
  width: 100%;
}

@media (max-width: 60em) {
  .feeds {
    padding: 0;
  }

  .feeds li,
  .feeds .feed {
    margin: 0;
    display: block;
    width: 100%;
    position: relative;
  }

  .feeds .remove,
  .feeds .feed .icon {
    display: none;
  }

  .feeds .feed .name {
    width: 100%;
    background: #3498db;
    color: #fff;
    text-align: left;
    padding: 1em 0;
    text-indent: 1em;
  }

  .feeds li:nth-child(even) .feed .name {
    background: #2980b9;
  }

  .feeds .feed .unreads {
    display: inline-block;
    width: auto;
    position: absolute;
    right: 1em;
    top: 50%;
    line-height: 0;
  }

  .feeds .feed .unreads:before {
    content: '';
  }
}

